@@ -1,6 +1,5 @@
 package org.broadinstitute.consent.http.db;
 
-import org.apache.commons.lang3.tuple.Pair;
 import org.broadinstitute.consent.http.enumeration.ElectionStatus;
 import org.broadinstitute.consent.http.enumeration.ElectionType;
 import org.broadinstitute.consent.http.enumeration.UserRoles;
@@ -12,17 +11,13 @@ import org.broadinstitute.consent.http.models.Dataset;
 import org.broadinstitute.consent.http.models.Election;
 import org.broadinstitute.consent.http.models.User;
 import org.broadinstitute.consent.http.models.Vote;
-import org.jdbi.v3.sqlobject.customizer.Bind;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.time.temporal.TemporalUnit;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.junit.Assert.assertEquals;
@@ -179,16 +174,14 @@ public class ElectionDAOTest extends DAOTestHelper {
     dataAccessRequestDAO.insertDARDatasetRelation(dar.getReferenceId(), d2.getDataSetId());
     // Create OPEN elections
     List<Integer> firstElectionIds = Stream
-      .of(createElectionsForDarDataset(dar, d1), createElectionsForDarDataset(dar, d2))
-      .flatMap(List::stream)
-      .collect(Collectors.toList());
+            .of(createElectionsForDarDataset(dar, d1), createElectionsForDarDataset(dar, d2))
+            .flatMap(List::stream).toList();
     // Cancel those elections
     firstElectionIds.forEach(id -> electionDAO.updateElectionById(id, ElectionStatus.CANCELED.getValue(), new Date(), true));
     // Create a new set of elections
     List<Integer> latestElectionIds = Stream
-      .of(createElectionsForDarDataset(dar, d1), createElectionsForDarDataset(dar, d2))
-      .flatMap(List::stream)
-      .collect(Collectors.toList());
+            .of(createElectionsForDarDataset(dar, d1), createElectionsForDarDataset(dar, d2))
+            .flatMap(List::stream).toList();
 
     Election latestAccessForD1 = electionDAO.findLastElectionByReferenceIdDatasetIdAndType(dar.getReferenceId(), d1.getDataSetId(), ElectionType.DATA_ACCESS.getValue());
     assertNotNull(latestAccessForD1);
@@ -503,7 +496,7 @@ public class ElectionDAOTest extends DAOTestHelper {
       recentClosedRPElection.getElectionId(), ElectionStatus.CLOSED.getValue(), new Date(), true);
     List<Election> elections =
       electionDAO.findLastElectionsByReferenceIds(Collections.singletonList(dar.referenceId));
-    List<Integer> electionIds = elections.stream().map(Election::getElectionId).collect(Collectors.toList());
+    List<Integer> electionIds = elections.stream().map(Election::getElectionId).toList();
     assertFalse(elections.isEmpty());
     assertEquals(2, elections.size());
     assertTrue(electionIds.contains(recentClosedAccessElection.getElectionId()));
@@ -1063,53 +1056,6 @@ public class ElectionDAOTest extends DAOTestHelper {
   }
 
   @Test
-  public void testFindLastDataAccessElectionsWithFinalVoteByStatus() {
-    Dac dac = createDac();
-    User user = createUserWithRoleInDac(UserRoles.CHAIRPERSON.getRoleId(), dac.getDacId());
-
-    Dataset ds1 = createDatasetWithDac(dac.getDacId());
-    DataAccessRequest dar1 = createDataAccessRequestV3();
-    String referenceId1 = dar1.getReferenceId();
-    Integer datasetId1 = ds1.getDataSetId();
-
-    Dataset ds2 = createDatasetWithDac(dac.getDacId());
-    DataAccessRequest dar2 = createDataAccessRequestV3();
-    String referenceId2 = dar2.getReferenceId();
-    Integer datasetId2 = ds2.getDataSetId();
-
-    Election ds1FirstElection = createDataAccessElection(referenceId1, datasetId1);
-    Election ds1SecondElection = createDataAccessElection(referenceId1, datasetId1);
-    createChairpersonVote(user.getUserId(), ds1FirstElection.getElectionId());
-    createChairpersonVote(user.getUserId(), ds1SecondElection.getElectionId());
-
-    electionDAO.updateElectionById(ds1FirstElection.getElectionId(),
-            ElectionStatus.OPEN.getValue(),
-            new Date(),
-            false);
-    electionDAO.updateElectionById(ds1SecondElection.getElectionId(),
-            ElectionStatus.OPEN.getValue(),
-            new Date(),
-            false);
-
-    Election ds2OnlyElection = createDataAccessElection(referenceId2, datasetId2);
-    createChairpersonVote(user.getUserId(), ds2OnlyElection.getElectionId());
-    electionDAO.updateElectionById(ds2OnlyElection.getElectionId(),
-            ElectionStatus.OPEN.getValue(),
-            new Date(),
-            false);
-
-    List<Election> returned =
-            electionDAO.findOpenLastElectionsByTypeAndFinalAccessChairPersonVote(
-                    ElectionType.DATA_ACCESS.getValue(),
-                    false);
-
-    assertEquals(2, returned.size());
-    assertEquals(ds1SecondElection.getElectionId(), returned.get(0).getElectionId());
-    // TODO: redundant output (would expect ds2OnlyElection to be returned as well)
-    assertEquals(ds1SecondElection.getElectionId(), returned.get(0).getElectionId());
-  }
-
-  @Test
   public void testFindLastDataAccessElectionsWithFinalVoteByStatus_FiltersByStatus() {
     Dac dac = createDac();
     Dataset dataset = createDatasetWithDac(dac.getDacId());
@@ -1154,85 +1100,6 @@ public class ElectionDAOTest extends DAOTestHelper {
   }
 
   @Test
-  public void testFindOpenLastElectionsByTypeAndFinalAccessChairPersonVote() {
-    Dac dac = createDac();
-    User user = createUserWithRoleInDac(UserRoles.CHAIRPERSON.getRoleId(), dac.getDacId());
-
-    Dataset ds1 = createDatasetWithDac(dac.getDacId());
-    DataAccessRequest dar1 = createDataAccessRequestV3();
-    String referenceId1 = dar1.getReferenceId();
-    Integer datasetId1 = ds1.getDataSetId();
-
-    Dataset ds2 = createDatasetWithDac(dac.getDacId());
-    DataAccessRequest dar2 = createDataAccessRequestV3();
-    String referenceId2 = dar2.getReferenceId();
-    Integer datasetId2 = ds2.getDataSetId();
-
-    Election ds1FirstElection = createDataAccessElection(referenceId1, datasetId1);
-    Election ds1SecondElection = createDataAccessElection(referenceId1, datasetId1);
-    createChairpersonVote(user.getUserId(), ds1FirstElection.getElectionId());
-    createChairpersonVote(user.getUserId(), ds1SecondElection.getElectionId());
-
-    electionDAO.updateElectionById(ds1FirstElection.getElectionId(),
-            ElectionStatus.FINAL.getValue(),
-            new Date(),
-            false);
-    electionDAO.updateElectionById(ds1SecondElection.getElectionId(),
-            ElectionStatus.FINAL.getValue(),
-            new Date(),
-            false);
-
-    Election ds2OnlyElection = createDataAccessElection(referenceId2, datasetId2);
-    createChairpersonVote(user.getUserId(), ds2OnlyElection.getElectionId());
-    electionDAO.updateElectionById(ds2OnlyElection.getElectionId(),
-            ElectionStatus.FINAL.getValue(),
-            new Date(),
-            false);
-
-    List<Election> returned =
-            electionDAO.findOpenLastElectionsByTypeAndFinalAccessChairPersonVote(
-                    ElectionType.DATA_ACCESS.getValue(),
-                    false);
-
-    assertEquals(2, returned.size());
-    assertEquals(ds1SecondElection.getElectionId(), returned.get(0).getElectionId());
-    assertEquals(ds2OnlyElection.getElectionId(), returned.get(1).getElectionId());
-  }
-
-  @Test
-  public void testFindOpenLastElectionsByTypeAndFinalAccessChairPersonVote_WrongFinalVote() {
-
-    Dac dac = createDac();
-    User user = createUserWithRoleInDac(UserRoles.CHAIRPERSON.getRoleId(), dac.getDacId());
-
-    Dataset ds = createDatasetWithDac(dac.getDacId());
-    DataAccessRequest dar = createDataAccessRequestV3();
-    String referenceId = dar.getReferenceId();
-    Integer datasetId = ds.getDataSetId();
-
-    Election dsFirstElection = createDataAccessElection(referenceId, datasetId);
-    Election dsSecondElection = createDataAccessElection(referenceId, datasetId);
-    createChairpersonVote(user.getUserId(), dsFirstElection.getElectionId());
-    createChairpersonVote(user.getUserId(), dsSecondElection.getElectionId());
-
-    electionDAO.updateElectionById(dsFirstElection.getElectionId(),
-            ElectionStatus.FINAL.getValue(),
-            new Date(),
-            false);
-    electionDAO.updateElectionById(dsSecondElection.getElectionId(),
-            ElectionStatus.FINAL.getValue(),
-            new Date(),
-            true);
-
-    List<Election> returned =
-            electionDAO.findOpenLastElectionsByTypeAndFinalAccessChairPersonVote(
-                    ElectionType.DATA_ACCESS.getValue(),
-                    false);
-
-    assertEquals(0, returned.size());
-  }
-
-  @Test
   public void testFindTotalElectionsByTypeStatusAndVote() {
     Dac dac = createDac();
     User user = createUserWithRoleInDac(UserRoles.CHAIRPERSON.getRoleId(), dac.getDacId());
@@ -1250,13 +1117,6 @@ public class ElectionDAOTest extends DAOTestHelper {
             new Date(),
             false
     );
-
-    // TODO: should be 1?
-//    assertEquals(1, (long)electionDAO.findTotalElectionsByTypeStatusAndVote(
-//            ElectionType.DATA_ACCESS.getValue(),
-//            ElectionStatus.OPEN.getValue(),
-//            false
-//    ));
 
     assertEquals(0, (long)electionDAO.findTotalElectionsByTypeStatusAndVote(
             ElectionType.DATA_ACCESS.getValue(),
